--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "the code for the web app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "author": "pulkits",
   "license": "ISC",
   "dependencies": {
-    "astro": "^4.4.0"
+    "node-fetch": "^3.3.2"
   }
 }
